--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>1000 tasks</title>
 </head>
 <body>
-
+<h1>1 task</h1>
+<h2>Today is: <span id="day_of_week"></span></h2>
+<h2>The Current time is: <span id="current_time"></span></h2>
 </body>
-<script src="script.js"></script>
+<script src="1.js"></script>
 </html>
