--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <h1>1 task</h1>
 <h2>Today is: <span id="day_of_week"></span></h2>
 <h2>The Current time is: <span id="current_time"></span></h2>
+<h1>2 task</h1>
+<button id="btn">Print</button>
 </body>
 <script src="1.js"></script>
+<script src="2.js"></script>
 </html>
