--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <h2>The Current time is: <span id="current_time"></span></h2>
 <h1>2 task</h1>
 <button id="btn">Print</button>
+<h1>3 task</h1>
+<h2>The Current date is: <span id="dd_mm_yy"></span></h2>
 </body>
 <script src="1.js"></script>
 <script src="2.js"></script>
+<script src="3.js"></script>
 </html>
