--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+    body{
+        background: #212121;
+        color:#bdc1c6;
+        font-family: Consolas;
+    }
+</style>
 <head>
     <meta charset="UTF-8">
     <title>1000 tasks</title>
@@ -9,12 +16,20 @@
 <h2>Today is: <span id="day_of_week"></span></h2>
 <h2>The Current time is: <span id="current_time"></span></h2>
 <h1>2 task</h1>
-<button id="btn">Print</button>
+<button id="btn_task2">Print</button>
 <h1>3 task</h1>
 <h2>The Current date is: <span id="dd_mm_yy"></span></h2>
+<h1>4 task</h1>
+<h2>Triangle area calculation:</h2>
+<ul><span>a</span><input id="a_side_task4" type="number"></ul>
+<ul><span>b</span><input id="b_side_task4" type="number"></ul>
+<ul><span>c</span><input id="c_side_task4" type="number"></ul>
+<button id="btn_task4">Find out!</button>
+<ul>Result: <span id="result_task4"></span></ul>
+<img src="https://media.tenor.com/-VG9cLwSYTcAAAAC/dancing-triangle-dancing.gif" alt="">
 </body>
-<script src="1.js"></script>
-<script src="2.js"></script>
-<script src="3.js"></script>
-<script src="4.js"></script>
+<script src="js/1.js"></script>
+<script src="js/2.js"></script>
+<script src="js/3.js"></script>
+<script src="js/4.js"></script>
 </html>
