--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
-    body{
+    body {
         background: #212121;
-        color:#bdc1c6;
+        color: #bdc1c6;
         font-family: Consolas;
     }
 </style>
@@ -21,15 +21,37 @@
 <h2>The Current date is: <span id="dd_mm_yy"></span></h2>
 <h1>4 task</h1>
 <h2>Triangle area calculation:</h2>
-<ul><span>a</span><input id="a_side_task4" type="number"></ul>
-<ul><span>b</span><input id="b_side_task4" type="number"></ul>
-<ul><span>c</span><input id="c_side_task4" type="number"></ul>
-<button id="btn_task4">Find out!</button>
-<ul>Result: <span id="result_task4"></span></ul>
+
+<ul><span>a</span><input class="a_side_task4" type="number"></ul>
+<ul><span>b</span><input class="b_side_task4" type="number"></ul>
+<ul><span>c</span><input class="c_side_task4" type="number"></ul>
+<ul>Result: <span class="result_task4"></span></ul>
+
+
+<ul><span>a</span><input class="a_side_task4" type="number"></ul>
+<ul><span>b</span><input class="b_side_task4" type="number"></ul>
+<ul><span>c</span><input class="c_side_task4" type="number"></ul>
+<ul>Result: <span class="result_task4"></span></ul>
+
+
+<ul><span>a</span><input class="a_side_task4" type="number"></ul>
+<ul><span>b</span><input class="b_side_task4" type="number"></ul>
+<ul><span>c</span><input class="c_side_task4" type="number"></ul>
+<ul>Result: <span class="result_task4"></span></ul>
+<div>
+    <button id="btn_task4">Find out!</button>
+</div>
+
+
+
 <img src="https://media.tenor.com/-VG9cLwSYTcAAAAC/dancing-triangle-dancing.gif" alt="">
+<h1>task 5</h1>
+<h2>w3resource</h2>
+<h2>Mirrored: <span id="reverted_word_task5"></span></h2>
 </body>
 <script src="js/1.js"></script>
 <script src="js/2.js"></script>
 <script src="js/3.js"></script>
 <script src="js/4.js"></script>
+<script src="js/5.js"></script>
 </html>
