--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 <h1>task 5</h1>
 <h2>w3resource</h2>
 <h2>Mirrored: <span id="reverted_word_task5"></span></h2>
+<input id="word_input-task5" type="text">
+<h3 id="output_reversed_word_task5"></h3>
+<button id="reverse_button_task5">Reverse!</button>
 </body>
 <script src="js/1.js"></script>
 <script src="js/2.js"></script>
