--- a/sandbox/sandbox.html
+++ b/sandbox/sandbox.html
@@ -17,5 +17,5 @@
 <button id="result_button">Calculate area and perimeter!</button>
 </body>
 <script src="return_task2.js"></script>
-
+<script src="function_task3.js"></script>
 </html>
