complete return task 2 need refactor return_task2.js

--- a/sandbox/sandbox.html
+++ b/sandbox/sandbox.html
@@ -12,7 +12,8 @@
     }
 </style>
 <body>
-<input id="rectangle_sides_input" type="text">
+<input id="rectangle_side_a_input" type="text">
+<input id="rectangle_side_b_input" type="text">
 <div id="result_div"></div>
 <button id="result_button">Calculate area and perimeter!</button>
 </body>
