--- a/sandbox/sandbox.html
+++ b/sandbox/sandbox.html
@@ -19,4 +19,5 @@
 </body>
 <script src="return_task2.js"></script>
 <script src="function_task3.js"></script>
+<script src="task4.js"></script>
 </html>
